--- a/package.json
+++ b/package.json
@@ -14,10 +14,10 @@
     "axios": "^1.6.8",
     "ejs": "^3.1.9",
     "express": "^4.19.2",
-    "fs": "^0.0.1-security",
     "fs-extra": "^11.2.0",
     "node-fetch": "^3.3.2",
-    "path": "^0.12.7"
+    "dotenv": "^8.2.0"
   }
 }
+
 
