--- a/package.json
+++ b/package.json
@@ -1,14 +1,14 @@
 {
   "name": "quotable-image-generator",
   "version": "1.0.0",
-  "description": "",
+  "description": "A Node.js application to generate quotes and images",
   "main": "app.js",
   "scripts": {
     "start": "node app.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
-  "keywords": [],
-  "author": "",
+  "keywords": ["quotable", "image", "generator"],
+  "author": "Your Name",
   "license": "ISC",
   "dependencies": {
     "axios": "^1.6.8",
