--- a/package.json
+++ b/package.json
@@ -16,8 +16,7 @@
     "express": "^4.19.2",
     "fs-extra": "^11.2.0",
     "node-fetch": "^3.3.2",
-    "dotenv": "^8.2.0"
+    "dotenv": "^8.2.0",
+    "simple-git": "^2.46.0"
   }
 }
-
-
