--- a/package.json
+++ b/package.json
@@ -18,6 +18,6 @@
     "node-fetch": "^3.3.2",
     "dotenv": "^8.2.0",
     "simple-git": "^2.46.0",
-    "googleapis": "^100.0.0" // Add this line to include googleapis
+    "googleapis": "^100.0.0" 
   }
 }
